cmake_minimum_required(VERSION 3.5)

project(Demos VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB Resources "${CMAKE_SOURCE_DIR}/dependence/resources/*")
foreach(file ${Resources})
    #file(COPY ${file} DESTINATION ${CMAKE_BINARY_DIR}/bin/${CMAKE_GENERATOR_PLATFORM}/Debug/)
	file(COPY ${file} DESTINATION ${CMAKE_BINARY_DIR}/bin/${CMAKE_GENERATOR_PLATFORM}/Release/)
    file(COPY ${file} DESTINATION ${CMAKE_BINARY_DIR}/lib/${CMAKE_GENERATOR_PLATFORM}/Release/)
endforeach()
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
add_subdirectory(MITK_DEMOS)
add_subdirectory(VTK_DEMOS)
add_subdirectory(CGAL_DEMOS)
