PROJECT(PolyDataToImage)

FIND_PACKAGE(VTK REQUIRED)
find_package(MITK 2023.04 REQUIRED)
find_package(OpenMP REQUIRED)
find_package(QT NAMES Qt5 REQUIRED COMPONENTS Widgets Core)
file(GLOB SRC "*.cpp" "*.cxx")
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "MITK_DEMOS")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${VTK_LIBRARIES} Qt5::Widgets Qt5::Core MitkCore MitkQtWidgets MitkMapperExt)

